<resources>
    <string name="app_name">MyFirebase</string>
    <string name="nome">Nome</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="confirmar_sua_senha">Confirmar sua senha</string>
    <string name="registrar">Registrar</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="cpf">CPF</string>
    <string name="telefone">Telefone</string>
    <string name="imagem_de_perfil">Imagem de Perfil</string>
</resources>
